done scrollbar issue for center part

--- a/styles/css/your_style.css
+++ b/styles/css/your_style.css
@@ -443,3 +443,8 @@ div.dt-button-collection button.dt-button:active:not(.disabled), div.dt-button-c
 .position_table td.highlighted {
     background-color:orange;
 }
+
+.height-fixed-100p {
+    height: 100vh;
+    overflow: scroll;
+}
